--- a/package.json
+++ b/package.json
@@ -4,16 +4,10 @@
   "description": "screenshoot",
   "main": "dist/app.js",
   "dependencies": {
-    "koa": "^2.11.0",
-    "koa-static": "^5.0.0",
-    "puppeteer-core": "^2.0.0",
-    "uuid": "^3.3.3"
+    "puppeteer-core": "^2.0.0"
   },
   "devDependencies": {
-    "@types/koa": "^2.11.0",
-    "@types/koa-static": "^4.0.1",
     "@types/puppeteer-core": "^2.0.0",
-    "@types/uuid": "^3.4.6",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
   },
